Moved UI up to better suit keybaord.

--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -104,13 +104,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WeCrowd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76J-ET-fHD">
-                                <rect key="frame" x="184" y="174" width="232" height="65"/>
+                                <rect key="frame" x="184" y="72" width="232" height="65"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="54"/>
                                 <color key="textColor" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EjD-OD-ML4">
-                                <rect key="frame" x="48" y="271" width="504" height="30"/>
+                                <rect key="frame" x="42" y="145" width="504" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="hYu-hW-GHS"/>
                                 </constraints>
@@ -123,7 +123,7 @@
                                 </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tyb-ZU-jrP">
-                                <rect key="frame" x="48" y="325" width="504" height="30"/>
+                                <rect key="frame" x="42" y="191" width="504" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="bce-4s-ZYA"/>
                                 </constraints>
@@ -136,7 +136,7 @@
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HxD-Hv-Pif">
-                                <rect key="frame" x="274" y="371" width="62" height="41"/>
+                                <rect key="frame" x="269" y="229" width="62" height="41"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <state key="normal" title="Login">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -148,24 +148,26 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="tyb-ZU-jrP" firstAttribute="leading" secondItem="1Vk-Nd-WAN" secondAttribute="leadingMargin" constant="32" id="5WH-he-Gi0"/>
-                            <constraint firstItem="HxD-Hv-Pif" firstAttribute="top" secondItem="tyb-ZU-jrP" secondAttribute="bottom" constant="16" id="FsP-mM-bMk"/>
+                            <constraint firstItem="tyb-ZU-jrP" firstAttribute="leading" secondItem="1Vk-Nd-WAN" secondAttribute="leadingMargin" constant="26" id="5WH-he-Gi0"/>
+                            <constraint firstItem="HxD-Hv-Pif" firstAttribute="top" secondItem="tyb-ZU-jrP" secondAttribute="bottom" constant="8" id="FsP-mM-bMk"/>
                             <constraint firstItem="76J-ET-fHD" firstAttribute="top" secondItem="czX-YX-Htl" secondAttribute="bottom" constant="100" id="PNC-yj-2Ec"/>
-                            <constraint firstItem="EjD-OD-ML4" firstAttribute="leading" secondItem="1Vk-Nd-WAN" secondAttribute="leadingMargin" constant="32" id="Vfl-9m-bPu"/>
+                            <constraint firstItem="76J-ET-fHD" firstAttribute="top" secondItem="czX-YX-Htl" secondAttribute="bottom" constant="8" id="TB6-jb-0e4"/>
+                            <constraint firstItem="EjD-OD-ML4" firstAttribute="leading" secondItem="1Vk-Nd-WAN" secondAttribute="leadingMargin" constant="26" id="Vfl-9m-bPu"/>
                             <constraint firstAttribute="centerX" secondItem="HxD-Hv-Pif" secondAttribute="centerX" constant="-40" id="Vxm-e7-506"/>
-                            <constraint firstItem="EjD-OD-ML4" firstAttribute="top" secondItem="76J-ET-fHD" secondAttribute="bottom" constant="32" id="W19-83-clm"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="tyb-ZU-jrP" secondAttribute="trailing" constant="32" id="ZL9-OO-5om"/>
+                            <constraint firstItem="EjD-OD-ML4" firstAttribute="top" secondItem="76J-ET-fHD" secondAttribute="bottom" constant="8" id="W19-83-clm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tyb-ZU-jrP" secondAttribute="trailing" constant="38" id="ZL9-OO-5om"/>
                             <constraint firstAttribute="centerY" secondItem="EjD-OD-ML4" secondAttribute="centerY" constant="14" id="ZQN-N9-RN9"/>
-                            <constraint firstAttribute="centerX" secondItem="HxD-Hv-Pif" secondAttribute="centerX" constant="-4.5" id="fJt-95-PqG"/>
+                            <constraint firstAttribute="centerX" secondItem="HxD-Hv-Pif" secondAttribute="centerX" id="fJt-95-PqG"/>
                             <constraint firstAttribute="centerX" secondItem="76J-ET-fHD" secondAttribute="centerX" id="gG4-1T-OP8"/>
-                            <constraint firstItem="tyb-ZU-jrP" firstAttribute="top" secondItem="EjD-OD-ML4" secondAttribute="bottom" constant="24" id="suE-Pj-P1B"/>
+                            <constraint firstItem="tyb-ZU-jrP" firstAttribute="top" secondItem="EjD-OD-ML4" secondAttribute="bottom" constant="16" id="suE-Pj-P1B"/>
                             <constraint firstAttribute="centerX" secondItem="EjD-OD-ML4" secondAttribute="centerX" id="wCA-2D-YPm"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="EjD-OD-ML4" secondAttribute="trailing" constant="32" id="wmG-Hh-fM1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EjD-OD-ML4" secondAttribute="trailing" constant="38" id="wmG-Hh-fM1"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="PNC-yj-2Ec"/>
+                                <exclude reference="ZQN-N9-RN9"/>
                                 <exclude reference="wCA-2D-YPm"/>
+                                <exclude reference="PNC-yj-2Ec"/>
                                 <exclude reference="Vxm-e7-506"/>
                             </mask>
                         </variation>
@@ -337,7 +339,7 @@
         <image name="Logo" width="300" height="55"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NMc-9M-Twa"/>
+        <segue reference="iuM-Qj-g2P"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="0.38665899166867213" blue="0.2383080413807257" alpha="1" colorSpace="calibratedRGB"/>
 </document>
