Made some autolayout changes. Added error log message.

--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -277,7 +277,7 @@
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="o8z-or-zq5">
-                                <rect key="frame" x="282" y="141" width="37" height="37"/>
+                                <rect key="frame" x="282" y="270" width="37" height="37"/>
                                 <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                         </subviews>
@@ -288,7 +288,9 @@
                             <constraint firstItem="kKb-yi-2d9" firstAttribute="top" secondItem="ug2-1b-XOY" secondAttribute="bottom" constant="8" id="EmH-Nq-4Ky"/>
                             <constraint firstAttribute="centerY" secondItem="kKb-yi-2d9" secondAttribute="centerY" id="Qmu-Zf-rG1"/>
                             <constraint firstAttribute="centerX" secondItem="kKb-yi-2d9" secondAttribute="centerX" id="SkV-YY-dic"/>
+                            <constraint firstItem="RsI-0b-Es2" firstAttribute="centerX" secondItem="o8z-or-zq5" secondAttribute="centerX" constant="-0.5" id="dCe-A7-TnN"/>
                             <constraint firstItem="kKb-yi-2d9" firstAttribute="centerX" secondItem="o8z-or-zq5" secondAttribute="centerX" id="eB7-H7-Oup"/>
+                            <constraint firstItem="RsI-0b-Es2" firstAttribute="centerY" secondItem="o8z-or-zq5" secondAttribute="centerY" constant="-1.5" id="f72-G2-X5F"/>
                             <constraint firstItem="ug2-1b-XOY" firstAttribute="top" secondItem="866-a5-Hwr" secondAttribute="bottom" constant="8" id="kue-u5-4sk"/>
                             <constraint firstItem="RsI-0b-Es2" firstAttribute="top" secondItem="kKb-yi-2d9" secondAttribute="bottom" constant="8" id="mLF-S3-caI"/>
                             <constraint firstItem="kKb-yi-2d9" firstAttribute="centerY" secondItem="o8z-or-zq5" secondAttribute="centerY" id="wbB-Bq-QuE"/>
@@ -296,6 +298,8 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="Qmu-Zf-rG1"/>
+                                <exclude reference="eB7-H7-Oup"/>
+                                <exclude reference="wbB-Bq-QuE"/>
                             </mask>
                         </variation>
                     </view>
@@ -415,6 +419,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dGc-Ic-WNA"/>
+        <segue reference="3Se-mT-u07"/>
     </inferredMetricsTieBreakers>
 </document>
