--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -189,12 +189,12 @@
         <scene sceneID="xxs-ja-3GE">
             <objects>
                 <tableViewController id="tkk-YJ-SKn" customClass="WCCampaignFeedViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" sectionHeaderHeight="22" sectionFooterHeight="22" id="C3h-SM-41T">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="22" sectionFooterHeight="22" id="C3h-SM-41T">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="CampaignCell" rowHeight="96" id="9cm-Ju-3W6" customClass="WCCampaignTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CampaignCell" rowHeight="88" id="9cm-Ju-3W6" customClass="WCCampaignTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9cm-Ju-3W6" id="QvT-W9-jCc">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -206,45 +206,53 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" tag="103" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="mlu-an-yCV">
-                                            <rect key="frame" x="445" y="8" width="80" height="80"/>
+                                            <rect key="frame" x="504" y="4" width="80" height="80"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="80" id="H56-eJ-L06"/>
                                                 <constraint firstAttribute="width" constant="80" id="IsP-42-xfj"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgR-Jp-vGB">
-                                            <rect key="frame" x="8" y="37" width="71" height="21"/>
+                                            <rect key="frame" x="8" y="48" width="71" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Donation Progress" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQo-be-iPb">
-                                            <rect key="frame" x="8" y="66" width="142" height="21"/>
+                                            <rect key="frame" x="103" y="48" width="142" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="VgR-Jp-vGB" firstAttribute="top" secondItem="gLd-Vo-gKT" secondAttribute="bottom" constant="14" id="1ra-YJ-vxx"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="mlu-an-yCV" secondAttribute="bottom" id="740-cu-Gv5"/>
                                         <constraint firstItem="OQo-be-iPb" firstAttribute="top" secondItem="VgR-Jp-vGB" secondAttribute="bottom" constant="8" id="8GY-Mo-05M"/>
                                         <constraint firstItem="OQo-be-iPb" firstAttribute="leading" secondItem="VgR-Jp-vGB" secondAttribute="trailing" constant="32" id="DTE-4X-MDF"/>
                                         <constraint firstItem="OQo-be-iPb" firstAttribute="leading" secondItem="QvT-W9-jCc" secondAttribute="leadingMargin" id="G6V-Ly-Anr"/>
                                         <constraint firstAttribute="centerY" secondItem="VgR-Jp-vGB" secondAttribute="centerY" id="IEH-ew-BW0"/>
+                                        <constraint firstItem="OQo-be-iPb" firstAttribute="top" secondItem="gLd-Vo-gKT" secondAttribute="bottom" constant="14" id="Ise-hw-4EA"/>
                                         <constraint firstItem="mlu-an-yCV" firstAttribute="top" secondItem="QvT-W9-jCc" secondAttribute="topMargin" id="K9K-sZ-96t"/>
                                         <constraint firstItem="VgR-Jp-vGB" firstAttribute="leading" secondItem="QvT-W9-jCc" secondAttribute="leadingMargin" id="PSD-DE-ydk"/>
                                         <constraint firstItem="gLd-Vo-gKT" firstAttribute="leading" secondItem="QvT-W9-jCc" secondAttribute="leadingMargin" id="PZh-UM-XhL"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="mlu-an-yCV" secondAttribute="trailing" constant="8" id="UcP-fL-0av"/>
                                         <constraint firstAttribute="centerY" secondItem="OQo-be-iPb" secondAttribute="centerY" id="ZCx-AB-doO"/>
                                         <constraint firstItem="gLd-Vo-gKT" firstAttribute="top" secondItem="QvT-W9-jCc" secondAttribute="topMargin" id="cda-ja-CY0"/>
-                                        <constraint firstItem="mlu-an-yCV" firstAttribute="trailing" secondItem="QvT-W9-jCc" secondAttribute="trailingMargin" id="lty-g9-tJw"/>
+                                        <constraint firstItem="mlu-an-yCV" firstAttribute="trailing" secondItem="QvT-W9-jCc" secondAttribute="trailingMargin" constant="-8" id="lty-g9-tJw"/>
+                                        <constraint firstItem="OQo-be-iPb" firstAttribute="leading" secondItem="VgR-Jp-vGB" secondAttribute="trailing" constant="24" id="seN-N8-DVe"/>
                                         <constraint firstAttribute="centerY" secondItem="mlu-an-yCV" secondAttribute="centerY" id="u1E-os-qBb"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
+                                            <exclude reference="IEH-ew-BW0"/>
+                                            <exclude reference="8GY-Mo-05M"/>
                                             <exclude reference="DTE-4X-MDF"/>
+                                            <exclude reference="G6V-Ly-Anr"/>
                                             <exclude reference="ZCx-AB-doO"/>
                                             <exclude reference="740-cu-Gv5"/>
                                             <exclude reference="K9K-sZ-96t"/>
+                                            <exclude reference="lty-g9-tJw"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
