Added logic for progress bar.

--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -347,6 +347,7 @@
                     <connections>
                         <outlet property="campaignDescription" destination="qzu-zN-Kqv" id="Ny5-wP-uFw"/>
                         <outlet property="campaignDonationProgress" destination="L3o-q2-7XQ" id="4OY-9h-lN0"/>
+                        <outlet property="campaignDonationProgressBar" destination="o3Y-1z-qFq" id="oWE-dQ-iZK"/>
                         <outlet property="giveMoneyButton" destination="NdA-dh-KhA" id="FaZ-Yo-cf6"/>
                     </connections>
                 </viewController>
